Name "KlimaLautern" angepasst

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Klimaentscheid Kaiserslautern
-tagline: Landkreis und Stadt Kaiserslautern klimaneutral!
+title: KlimaLautern
+tagline: Kaiserslautern klimaneutral!
 url: https://klimaentscheid-kaiserslautern.github.io/
 
 author:
-  name: Klimaentscheid Kaiserslautern
+  name: KlimaLautern
   url: https://klimaentscheid-kaiserslautern.github.io/
   twitter: KlimaLautern
 
